# evalrs

./: Cargo.toml  Dockerfile  Dockerfile-ci  LICENSE  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: ci.yaml  rust-clippy.yml
apidocs/: openapi.yaml
config/: default.yaml
src/: app_state.rs  errors.rs  evaluator.rs  handlers.rs  js_prelude.rs  lib.rs  main.rs  request.rs  response.rs  settings.rs  tests.rs
src/cache_backend/: dummy_backend.rs  local_memory_backend.rs  mod.rs  test_local_memory_backend.rs
src/components/: payloads.rs
src/templates/: index.rs  mod.rs
src/tests/: mod.rs  test_api.rs  test_eval_api.rs  test_evaluator.rs
