[package]
name = "evalrs"
version = "0.1.3"
authors = ["Serhii Zavadskyi <fevral13@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.1.0"
config = { version = "0.13.1", features = ["yaml"] }
env_logger = "0.9.0"
js-sandbox = "0.2.0-rc.0"
lru = "0.7.7"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
log = "0.4.17"

[dependencies.tera]
version = "1.16.0"
default-features = false