[package]
name = "evalrs"
version = "0.1.4"
authors = ["Serhii Zavadskyi <fevral13@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.3.1"
config = { version = "0.13.3", features = ["yaml"] }
env_logger = "0.9.3"
js-sandbox = "0.2.0-rc.1"
lru = "0.7.8"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
log = "0.4.17"

[dependencies.tera]
version = "1.18.1"
default-features = false