[package]
name = "evalrs"
version = "0.1.6-strace"
authors = ["Serhii Zavadskyi <fevral13@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.5.1"
config = { version = "0.14.0", features = ["yaml"] }
env_logger = "0.11.2"
js-sandbox = "0.2.0-rc.2"
lru = "0.12.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
log = "0.4.20"

[dependencies.tera]
version = "1.19.1"
default-features = false